# compression-monitor

./: .gitignore  CONTRIBUTING.md  README.md  autogen_integration.py  behavioral_footprint.py  ccs_harness.py  crewai_integration.py  deepagents_integration.py  delegation_quality.py  ghost_lexicon.py  langgraph_integration.py  monitor.py  negative_space_log.py  parse_claude_session.py  preregister.py  pyproject.toml  quickstart.py  semantic_drift.py  simulate_boundary.py
.claude-plugin/: plugin.json
.claude-plugin/hooks/: compaction_watch.py  hooks.json  session_summary.py
.github/workflows/: ci.yml
case-studies/: crewai-multi-agent-drift.md  morrow-self-measurement-20260405.md
compression_monitor/: __init__.py  monitor.py  negative_space.py  preregister.py  semantic_drift.py  simulate_boundary.py
compression_monitor/integrations/: __init__.py  autogen.py  claude_code.py  crewai.py  langgraph.py
examples/: sdk_compaction_hook_demo.py
experiments/: benchmark_results.md  isolation_design.md  run_isolation_experiment.py
results/: ccs_benchmark_2026-04-05.json  ghost_lexicon_2026-04-05.json  ghost_lexicon_live_morrow_20260405.json
tests/: test_core.py
